--- a/gb/18/4/30/n10348311.md
+++ b/gb/18/4/30/n10348311.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xmffez390/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xmffez390/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xmffez390/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xmffez390/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xmffez390/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xmffez390/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xmffez390/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xmffez390/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xmffez390/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xmffez390/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xmffez390/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xmffez390/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xmffez390/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xmffez390/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xmffez390/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xmffez390/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xmffez390/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xmffez390/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xmffez390/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xmffez390/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xmffez390/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xmffez390/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xmffez390/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xmffez390/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>神韵令人觉悟 心脏病专家赞演出超凡入圣</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2018/04/180429174052100101-600x400.jpg" />
 <h6></h6>
 <hr>
-	<p>【大纪元2018年04月30日讯】（大纪元记者麦蕾<ahref="https://github.com/xmffez390/djy/blob/master/gb/tag/%E5%A2%A8%E8%A5%BF%E5%93%A5%E7%93%9C%E8%BE%BE%E6%8B%89%E5%93%88%E6%8B%89.md#1">墨西哥瓜达拉哈拉</a>报导）Daniel Gil Sanchez先生是一位奇才，除了是一位心脏病专家，他还精通6、7种语言，并酷爱音乐，练习演奏乐器和唱歌。</p>
-<p>他和太太观看了4月29日下午<ahref="https://github.com/xmffez390/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>巡回艺术团在<ahref="https://github.com/xmffez390/djy/blob/master/gb/tag/%E5%A2%A8%E8%A5%BF%E5%93%A5%E7%93%9C%E8%BE%BE%E6%8B%89%E5%93%88%E6%8B%89.md#1">墨西哥瓜达拉哈拉</a>的第三场演出后，盛赞演出不仅具备形神兼备之美，而且给人予启发，令人升华。</p>
-<p>Daniel Gil Sanchez先生拥有自己的内科和心脏病诊所。他认为<ahref="https://github.com/xmffez390/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出由一个中心灵魂将所有一切完美地协调和组合在一起，其中的神性内涵是最重要的。</p>
+	<p>【大纪元2018年04月30日讯】（大纪元记者麦蕾<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A2%A8%E8%A5%BF%E5%93%A5%E7%93%9C%E8%BE%BE%E6%8B%89%E5%93%88%E6%8B%89.md#1">墨西哥瓜达拉哈拉</a>报导）Daniel Gil Sanchez先生是一位奇才，除了是一位心脏病专家，他还精通6、7种语言，并酷爱音乐，练习演奏乐器和唱歌。</p>
+<p>他和太太观看了4月29日下午<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>巡回艺术团在<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A2%A8%E8%A5%BF%E5%93%A5%E7%93%9C%E8%BE%BE%E6%8B%89%E5%93%88%E6%8B%89.md#1">墨西哥瓜达拉哈拉</a>的第三场演出后，盛赞演出不仅具备形神兼备之美，而且给人予启发，令人升华。</p>
+<p>Daniel Gil Sanchez先生拥有自己的内科和心脏病诊所。他认为<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>演出由一个中心灵魂将所有一切完美地协调和组合在一起，其中的神性内涵是最重要的。</p>
 <h2>“神韵让人们的身体和灵魂‘合而为一’”</h2>
 <p>作为一名医生，他从职业的角度讲述了任何带来谐和的事物都与疗愈有关，人体内有各种子系统，组装起来之后，需要谐和的力量才能运行工作。“如果没有谐和，它们将无法工作。除非有一个完全精心策划的协调组合，由一个中心灵魂组合在一起。 ” 他认为神韵就起到了这个作用，让人们身体和灵魂“合而为一”了。</p>
 <p>他表示神韵的舞蹈家和歌唱家都非常专业。“神韵演出用如此美丽动人的方式将所有的一切组合在一起。当所有的一切完美组合时，带来的是美，就是这么单纯谐和的呈现。神韵艺术家们是一个美好的团体。”Sanchez说。</p>
 <p>除了艺术形式之美，他发现神韵演出拥有更深的内涵，“如果你接触过佛家对生活的理念，我认为演出呈现的是觉者的期望。演出给人灵感，让人感觉是一个精心策划的作品。”</p>
 <h2>“神佛飞升的画面让人惊叹”</h2>
-<p>他认为演出的节目拥有一种抚慰心灵的美，令人升华。“是的！令人觉悟，抚慰人心，所有能够看到的美丽动人的舞蹈组合，那种优雅，还有最后一个节目<ahref="https://github.com/xmffez390/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>救人的大结局，你听不到任何声音，静静地看着他们飞升，充满着和平，那个场面真是令人惊叹！非常、非常的超凡入圣！” 观看时，“你可以感受到巨大的<ahref="https://github.com/xmffez390/djy/blob/master/gb/tag/%E8%83%BD%E9%87%8F.md#1">能量</a>，伴随着谐和，令你全身震撼。” Sanchez说。</p>
+<p>他认为演出的节目拥有一种抚慰心灵的美，令人升华。“是的！令人觉悟，抚慰人心，所有能够看到的美丽动人的舞蹈组合，那种优雅，还有最后一个节目<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%88%9B%E4%B8%96%E4%B8%BB.md#1">创世主</a>救人的大结局，你听不到任何声音，静静地看着他们飞升，充满着和平，那个场面真是令人惊叹！非常、非常的超凡入圣！” 观看时，“你可以感受到巨大的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E8%83%BD%E9%87%8F.md#1">能量</a>，伴随着谐和，令你全身震撼。” Sanchez说。</p>
 <p>得知艺术家们是以“真、善、忍”为准则的法轮大法修炼者，他显得非常激动。他称赞道：“真是超凡脱俗！坦诚说，我从未见过这么完美的演出，这么谐和的组合。无论来看神韵需要付出什么，每一分都是值得的。真的！恭喜神韵艺术家们，他们完成了一个壮观的杰作！”</p>
 <h2>“神韵演员也会是奥运冠军”</h2>
 <p>“我相信所有这些演员不仅仅是演员，他们也一定会是奥运会冠军，全是艺术体操的冠军级人物，其他舞蹈演员是不会这些技术（翻腾跳跃）的，所以神韵演员很神奇，而且很漂亮。” Sanchez先生说。</p>
@@ -27,43 +27,43 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/18/4/29/n10346395.md#1">医生夫妇赞颂神韵艺术家水平世界一流</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/18/4/29/n10346413.md#1">神韵音乐摄人心魄 墨西哥政府高官夫妇着迷</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/18/4/29/n10346451.md#1">神韵演出美妙绝伦 墨国资深媒体人敬佩</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/18/4/29/n10346573.md#1">神韵是文化艺术典范 公司CEO呼吁要保护</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/18/4/29/n10346608.md#1">神韵墨西哥瓜城爆满 各界名流向艺术家致敬</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/18/4/29/n10347089.md#1">神韵色彩耀眼动人 设计师夫妇惊叹美不胜收</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/29/n10346395.md#1">医生夫妇赞颂神韵艺术家水平世界一流</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/29/n10346413.md#1">神韵音乐摄人心魄 墨西哥政府高官夫妇着迷</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/29/n10346451.md#1">神韵演出美妙绝伦 墨国资深媒体人敬佩</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/29/n10346573.md#1">神韵是文化艺术典范 公司CEO呼吁要保护</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/29/n10346608.md#1">神韵墨西哥瓜城爆满 各界名流向艺术家致敬</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/4/29/n10347089.md#1">神韵色彩耀眼动人 设计师夫妇惊叹美不胜收</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/31/n11835336.md#1" target="_blank">王赫：庚子年首月 中共地动山摇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/16/n11726522.md#1" target="_blank">见证生命奇迹 感悟幸福荣耀</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/2/n10947448.md#1" target="_blank">晓明：与晏乐斌先生谈广西屠杀及文革“处遗”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10697882.md#1" target="_blank">这些患绝症的精英们何以逢生（2）</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/20/n12963544.md#1">血月是什么征兆 圣经预言怎么说？</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/25/n12973922.md#1">美军士兵披露绝密任务：与外星人对话（下）</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/24/n12971668.md#1">美军士兵披露绝密任务：与外星人对话（上）</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/22/n12967538.md#1">中华文化有“血月”之说吗  有教人避难之法吗？</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/22/n12968274.md#1">金簪满头 端艳无双——大明贵妇必备的头面</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/27/n12980801.md#1">【新闻看点】美参议院四箭齐发 助推抗击中共</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/27/n12980795.md#1">【时事纵横】风向大变 美解密疫源情报 战狼反扑</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/27/n12980833.md#1">【秦鹏直播】美宣告与中共接触结束 王靖渝获释</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/26/n12976559.md#1">雨下在山区 气象局：台湾中南部7县市大雨特报</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/26/n12978088.md#1">【秦鹏直播】福西一语捅破天 美国中共都乱了</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/25/n12975314.md#1">周三罕见“超级花血月”3种月球现象同现</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/25/n12975106.md#1">被抹黑台湾爆疫情便逃回香港 黄秋生霸气回应</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/27/n12978414.md#1">38岁胡歌近照曝光 消瘦老态惊呆网友</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/26/n12977852.md#1">在台创立个人品牌 杜汶泽：台湾出品就是良品</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/26/n12976614.md#1">星野源谈向新垣结衣求婚过程 透露彼此昵称</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/25/n12975521.md#1">被范冰冰事件所累？ 冯小刚赔华谊兄弟逾亿元</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/26/n12977519.md#1">台湾疫情告急 到底该不该普筛？专家解答</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/26/n12976124.md#1">受益法轮功 折磨婴儿的罕见皮肤病彻底痊愈</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/27/n12980666.md#1">美国终于不用戴口罩了？2类人不能摘口罩</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/27/n12979302.md#1">为什么有些人无法忍受别人的咀嚼声？</a></li>
-<li><a href="https://github.com/xmffez390/djy/blob/master/gb/21/5/26/n12977062.md#1">【重播】美国疫情结束了？需避免一大危机</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xmffez390/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xmffez390/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/30/n10348311.htm">神韵令人觉悟 心脏病专家赞演出超凡入圣</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/18/4/30/n10348311.htm">神韵令人觉悟 心脏病专家赞演出超凡入圣</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xmffez390/djy/blob/master/gb/18/4/30/n10348311.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xmffez390/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xmffez390/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xmffez390/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xmffez390/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xmffez390/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/18/4/30/n10348311.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
